--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,10 +20,10 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="65"/>
+      <BuildNr Value="66"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
-    <BuildModes Count="4" Active="Release32">
+    <BuildModes Count="4" Active="Debug32">
       <Item1 Name="Debug" Default="True"/>
       <Item2 Name="Release">
         <CompilerOptions>
@@ -121,11 +121,6 @@
       <Version Value="2"/>
     </PublishOptions>
     <RunParams>
-      <local>
-        <CommandLineParams Value="--debug-log=log.txt"/>
-        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
-        <WorkingDirectory Value="C:\github\ibiblia"/>
-      </local>
       <FormatVersion Value="2"/>
       <Modes Count="1">
         <Mode0 Name="default">
@@ -155,10 +150,11 @@
         <PackageName Value="LCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="49">
+    <Units Count="48">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <CursorPos X="15" Y="4"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
@@ -170,7 +166,6 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
         <TopLine Value="576"/>
         <CursorPos X="20" Y="601"/>
@@ -182,9 +177,9 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="20"/>
-        <TopLine Value="551"/>
-        <CursorPos X="22" Y="562"/>
+        <EditorIndex Value="19"/>
+        <TopLine Value="1211"/>
+        <CursorPos X="14" Y="1227"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -216,9 +211,9 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="25"/>
-        <TopLine Value="468"/>
-        <CursorPos X="7" Y="487"/>
+        <EditorIndex Value="24"/>
+        <TopLine Value="562"/>
+        <CursorPos X="40" Y="579"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -228,7 +223,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="23"/>
+        <EditorIndex Value="22"/>
         <TopLine Value="110"/>
         <CursorPos X="3" Y="130"/>
         <UsageCount Value="205"/>
@@ -241,7 +236,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="24"/>
+        <EditorIndex Value="23"/>
         <TopLine Value="4"/>
         <CursorPos X="29" Y="56"/>
         <UsageCount Value="201"/>
@@ -254,7 +249,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="85"/>
         <CursorPos Y="94"/>
-        <UsageCount Value="165"/>
+        <UsageCount Value="164"/>
       </Unit7>
       <Unit8>
         <Filename Value="formpropprojeto.pas"/>
@@ -262,7 +257,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="27"/>
+        <EditorIndex Value="26"/>
         <TopLine Value="115"/>
         <CursorPos X="6" Y="120"/>
         <UsageCount Value="204"/>
@@ -273,7 +268,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="26"/>
+        <EditorIndex Value="25"/>
         <TopLine Value="35"/>
         <CursorPos Y="53"/>
         <UsageCount Value="224"/>
@@ -294,7 +289,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="16"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -303,7 +298,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="427"/>
         <CursorPos X="35" Y="440"/>
         <UsageCount Value="203"/>
@@ -326,7 +321,7 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="31"/>
+        <EditorIndex Value="30"/>
         <TopLine Value="59"/>
         <CursorPos X="21" Y="71"/>
         <UsageCount Value="228"/>
@@ -336,7 +331,7 @@
       <Unit15>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="33"/>
+        <EditorIndex Value="32"/>
         <TopLine Value="101"/>
         <CursorPos X="30" Y="118"/>
         <UsageCount Value="232"/>
@@ -346,7 +341,7 @@
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
-        <EditorIndex Value="32"/>
+        <EditorIndex Value="31"/>
         <TopLine Value="23"/>
         <CursorPos X="23" Y="49"/>
         <UsageCount Value="212"/>
@@ -356,7 +351,7 @@
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
-        <EditorIndex Value="30"/>
+        <EditorIndex Value="29"/>
         <TopLine Value="241"/>
         <CursorPos X="15" Y="261"/>
         <UsageCount Value="202"/>
@@ -366,21 +361,20 @@
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="28"/>
-        <TopLine Value="42"/>
-        <CursorPos X="18" Y="58"/>
+        <EditorIndex Value="27"/>
+        <TopLine Value="38"/>
+        <CursorPos X="34" Y="55"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit18>
       <Unit19>
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="Sintagma"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="87"/>
-        <CursorPos X="15" Y="102"/>
+        <UnitName Value="Syntagm"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="768"/>
+        <CursorPos X="14" Y="794"/>
         <UsageCount Value="202"/>
-        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="unitabout.pas"/>
@@ -388,7 +382,7 @@
         <ComponentName Value="FormAbout"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="11"/>
         <CursorPos X="18" Y="12"/>
         <UsageCount Value="241"/>
@@ -399,7 +393,7 @@
         <Filename Value="myswordmodule.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MySwordModule"/>
-        <EditorIndex Value="22"/>
+        <EditorIndex Value="21"/>
         <TopLine Value="15"/>
         <CursorPos X="61" Y="33"/>
         <UsageCount Value="213"/>
@@ -421,7 +415,7 @@
         <EditorIndex Value="6"/>
         <TopLine Value="1018"/>
         <CursorPos Y="1026"/>
-        <UsageCount Value="182"/>
+        <UsageCount Value="192"/>
         <Loaded Value="True"/>
       </Unit23>
       <Unit24>
@@ -430,20 +424,20 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="144"/>
         <CursorPos Y="162"/>
-        <UsageCount Value="164"/>
+        <UsageCount Value="163"/>
       </Unit24>
       <Unit25>
         <Filename Value="C:\Users\rubio\AppData\Local\lazarus\onlinepackagemanager\packages\kcontrols\source\kmemo.pas"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="2409"/>
         <CursorPos X="14" Y="2424"/>
-        <UsageCount Value="60"/>
+        <UsageCount Value="59"/>
       </Unit25>
       <Unit26>
         <Filename Value="htmlcolors.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="HTMLColors"/>
-        <EditorIndex Value="29"/>
+        <EditorIndex Value="28"/>
         <TopLine Value="71"/>
         <CursorPos X="50" Y="91"/>
         <UsageCount Value="232"/>
@@ -484,7 +478,7 @@
         <UnitName Value="BibleTreeView"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="19"/>
-        <UsageCount Value="37"/>
+        <UsageCount Value="36"/>
       </Unit30>
       <Unit31>
         <Filename Value="bibletreeview.pas"/>
@@ -516,13 +510,13 @@
       <Unit34>
         <Filename Value="bibletreeview.lrs"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="4"/>
+        <UsageCount Value="3"/>
       </Unit34>
       <Unit35>
         <Filename Value="projectfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ProjectFile"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="14"/>
         <CursorPos X="32" Y="40"/>
         <UsageCount Value="238"/>
         <Loaded Value="True"/>
@@ -532,7 +526,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="1304"/>
         <CursorPos Y="1322"/>
-        <UsageCount Value="44"/>
+        <UsageCount Value="43"/>
       </Unit36>
       <Unit37>
         <Filename Value="pcre_dll.pas"/>
@@ -548,14 +542,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="206"/>
         <CursorPos X="35" Y="119"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="29"/>
       </Unit38>
       <Unit39>
         <Filename Value="C:\tools\lazarus\fpc\3.2.0\source\rtl\objpas\sysutils\syshelph.inc"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="115"/>
         <CursorPos X="14" Y="131"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="29"/>
       </Unit39>
       <Unit40>
         <Filename Value="logosbiblemodule.pas"/>
@@ -564,7 +558,7 @@
         <EditorIndex Value="7"/>
         <TopLine Value="250"/>
         <CursorPos X="3" Y="146"/>
-        <UsageCount Value="143"/>
+        <UsageCount Value="154"/>
         <Loaded Value="True"/>
       </Unit40>
       <Unit41>
@@ -573,186 +567,75 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="1677"/>
         <CursorPos X="14" Y="1692"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="7"/>
       </Unit41>
       <Unit42>
-        <Filename Value="C:\tools\lazarus\fpc\3.2.0\source\packages\rtl-objpas\src\inc\strutils.pp"/>
-        <UnitName Value="StrUtils"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="59"/>
-        <CursorPos X="10" Y="76"/>
-        <UsageCount Value="1"/>
-      </Unit42>
-      <Unit43>
         <Filename Value="C:\tools\lazarus\lcl\forms.pp"/>
         <UnitName Value="Forms"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="1144"/>
         <CursorPos X="14" Y="1161"/>
-        <UsageCount Value="18"/>
-      </Unit43>
-      <Unit44>
+        <UsageCount Value="17"/>
+      </Unit42>
+      <Unit43>
         <Filename Value="forminterlinearverserules.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FormInterlinearVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formInterlinearVerseRules"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="41"/>
         <CursorPos X="41" Y="55"/>
-        <UsageCount Value="76"/>
+        <UsageCount Value="87"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
-      </Unit44>
-      <Unit45>
+      </Unit43>
+      <Unit44>
         <Filename Value="C:\tools\lazarus\lcl\controls.pp"/>
         <UnitName Value="Controls"/>
-        <EditorIndex Value="21"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="1572"/>
         <CursorPos X="15" Y="1587"/>
-        <UsageCount Value="13"/>
+        <UsageCount Value="18"/>
         <Loaded Value="True"/>
-      </Unit45>
-      <Unit46>
+      </Unit44>
+      <Unit45>
         <Filename Value="C:\tools\lazarus\lcl\lclintf.pas"/>
         <UnitName Value="LCLIntf"/>
         <EditorIndex Value="-1"/>
-        <UsageCount Value="10"/>
-      </Unit46>
-      <Unit47>
+        <UsageCount Value="9"/>
+      </Unit45>
+      <Unit46>
         <Filename Value="C:\tools\lazarus\lcl\lcltranslator.pas"/>
         <UnitName Value="LCLTranslator"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="568"/>
         <CursorPos X="22" Y="592"/>
-        <UsageCount Value="10"/>
-      </Unit47>
-      <Unit48>
+        <UsageCount Value="9"/>
+      </Unit46>
+      <Unit47>
         <Filename Value="C:\tools\lazarus\fpc\3.2.0\source\rtl\objpas\fgl.pp"/>
         <EditorIndex Value="5"/>
         <TopLine Value="971"/>
         <CursorPos X="44" Y="984"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="16"/>
         <Loaded Value="True"/>
-      </Unit48>
+      </Unit47>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="3" HistoryIndex="2">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="216" Column="16" TopLine="198"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="544" Column="34" TopLine="527"/>
       </Position1>
       <Position2>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="164" Column="15" TopLine="148"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="564" Column="23" TopLine="547"/>
       </Position2>
       <Position3>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="881" Column="9" TopLine="871"/>
+        <Filename Value="sugestao.pas"/>
+        <Caret Line="579" Column="40" TopLine="562"/>
       </Position3>
-      <Position4>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="193" Column="15" TopLine="177"/>
-      </Position4>
-      <Position5>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="1138" Column="22" TopLine="1111"/>
-      </Position5>
-      <Position6>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="119" Column="15" TopLine="103"/>
-      </Position6>
-      <Position7>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="1035" Column="15" TopLine="1017"/>
-      </Position7>
-      <Position8>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="1030" Column="29" TopLine="1013"/>
-      </Position8>
-      <Position9>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="1026" Column="37" TopLine="1013"/>
-      </Position9>
-      <Position10>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="140" Column="31" TopLine="119"/>
-      </Position10>
-      <Position11>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="136" Column="10" TopLine="113"/>
-      </Position11>
-      <Position12>
-        <Filename Value="chapterview.pas"/>
-      </Position12>
-      <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="263" Column="31" TopLine="250"/>
-      </Position13>
-      <Position14>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="169" Column="15" TopLine="153"/>
-      </Position14>
-      <Position15>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="306" Column="11" TopLine="298"/>
-      </Position15>
-      <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="135" Column="15" TopLine="119"/>
-      </Position16>
-      <Position17>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="1112" Column="31" TopLine="1111"/>
-      </Position17>
-      <Position18>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="140" Column="15" TopLine="124"/>
-      </Position18>
-      <Position19>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="563" Column="39" TopLine="534"/>
-      </Position19>
-      <Position20>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="553" Column="10" TopLine="536"/>
-      </Position20>
-      <Position21>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="547" Column="44" TopLine="530"/>
-      </Position21>
-      <Position22>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="548" Column="13" TopLine="531"/>
-      </Position22>
-      <Position23>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="547" Column="107" TopLine="530"/>
-      </Position23>
-      <Position24>
-        <Filename Value="chapterview.pas"/>
-        <Caret Line="1026" TopLine="1018"/>
-      </Position24>
-      <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="888" TopLine="873"/>
-      </Position25>
-      <Position26>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="574" Column="13" TopLine="552"/>
-      </Position26>
-      <Position27>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="561" Column="18" TopLine="539"/>
-      </Position27>
-      <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="169" Column="15" TopLine="151"/>
-      </Position28>
-      <Position29>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="558" TopLine="565"/>
-      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
